--- a/frontEnd/src/styles/prompt.css
+++ b/frontEnd/src/styles/prompt.css
@@ -1,38 +1,4 @@
-body {
-    background: #000;
-}
-
 .box{
-    justify-content: center;
-}
-.box .response {
-    border-color: aliceblue;
-    height: 75vh;
-    width: 50vh;
-    margin: 10px ;
-    padding: 20px;
-    background-color: #cd121200;
-}
-
-.box .prompt {
-    color: white;
-    font-size: 20px;
-    margin-bottom: 20px;
-    width: 90%;
-    margin: 1rem;
-    padding: 0.5rem;
-    display: flex;
-}
-
-.box .prompt input {
-    width: 90%;
-    padding: 0.5rem;
-    font-size: 16px;
-    border: none;
-    border-bottom: 2px solid white;
-}
-
-.box .prompt button {
-    color: black;
-    background-color: white;    
+    background-image: url('https://tse2.mm.bing.net/th?id=OIP.HZkE9ipzbITIWBYJrknabwHaFY&pid=Api&P=0&h=180');
+    background-size: cover;
 }
